# tyrant_optimize

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  Makefile  Makefile-debug  Makefile-debug.intel  Makefile-debug.linux  Makefile-debug.osx  Makefile.ahk.bat  Makefile.intel  Makefile.linux  Makefile.osx  README.md  SimpleTUOLiveSim.ahk  SimpleTUOptimizeStarter.ahk  TODO  algorithms.cpp  algorithms.h  algorithms_util.cpp  algorithms_util.h  card.h  cards.cpp  cards.h  cmake.sh  deck.cpp  deck.h  read.cpp  read.h  sim.cpp  sim.h  sim_test.cpp  timecmd.bat  tuo-eval  tuo-eval-red  tuo-less  tuo-omp-cmp  tuo-omp-no2-evaluate  tuo-org  (+7 more)
.circleci/: config.yml
.github/workflows/: build_every_commit.yml  macos.yml  mingw.yml  release.yml  test.yml  travis.yml  ubuntu.yml  windows.yml
data/: bges.txt  cardabbrs.txt  database.yml  download-all.sh  levels.xml  loss.pmml  own.txt  points.pmml  raids.xml  stall.pmml  tuo.pmml  win.pmml
make/: Makefile-debug.linux  Makefile-debug.osx  Makefile-debug.windows  Makefile-test.linux  Makefile-test.windows  Makefile.intel  Makefile.linux  Makefile.osx  Makefile.windows
ml/: README.md  database.yml  load.py  loss.pmml  points.pmml  pyproject.toml  requirements.txt  stall.pmml  test.b64  train.py  tuo.pmml  win.pmml
ml/tuo_ml/: __init__.py  train.py
test/: test_bges.csv  test_multi_units.csv  test_sinlge_units.csv  test_whole_decks.csv
tests/: test_bges.csv  test_crash.csv  test_multi_units.csv  test_sinlge_units.csv  test_whole_decks.csv
tests/algo/data/: cards_section_1.xml  cards_section_10.xml  cards_section_11.xml  cards_section_12.xml  cards_section_13.xml  cards_section_19.xml  cards_section_2.xml  cards_section_3.xml  cards_section_4.xml  cards_section_5.xml  ownedcards.txt  skills_set.xml
tests/db/data/: cards_section_14.xml  cards_section_8.xml  skills_set.xml
tests/ml/data/: cardabbrs.txt  cards_section_6.xml  cards_section_7.xml  customdecks.txt  missions.xml
tests/sim/data/: cards_section_15.xml  cards_section_16.xml  cards_section_17.xml  cards_section_18.xml  cards_section_9.xml  customdecks.txt  fusion_recipes_cj2.xml  missions.xml  raids.xml  sim_test.cpp
tools/: .tu-deck-grabber.ini  appraise-gauntlet.sh  cq.py  distribute.sh  example.tuo.login-mapping  gt-analyze-similar-decks.py  numerate-gauntlet.sh  reorder-gauntlet.sh  tu-deck-grabber.py  tuo-kill-by-log.sh  tuo.sh
tools/to-be-generalized/: tuo-exp-arena-brawl.sh  tuo-exp-cq-run-all.sh  tuo-exp-cq.sh  tuo-exp-gw-run-all.sh  tuo-exp-gw.sh  tuo-exp-raid-run-all.sh  tuo-exp-raid.sh  tuo-gq.sh  tuo-kill-by-word.sh  tuo-log-show-stat-cq.py  tuo-log-show-stat-gw.py  tuo-log-show-stat-raid.py  tuo-pause-all-ordered.sh  tuo-run-all.sh  tuo-show-gw.sh  tuo-unpause-all-ordered.sh  tuo-watch.sh
tools/to-be-generalized/campaign/: run-all.sh  run-vip.sh  stat-all.sh
